# minix

./: CMakeLists.txt  Makefile  README.md  build.sh  toolchain.cmake
buildir/: CMakeCache.txt  Makefile  cmake_install.cmake
buildir/commands/: Makefile  cmake_install.cmake
buildir/commands/make/: Makefile  cmake_install.cmake
commands/: CMakeLists.txt
commands/make/: CMakeLists.txt
distrib/sets/lists/base/: mi  shl.mi
distrib/sets/lists/comp/: ad.arm  ad.powerpc  md.amd64  md.i386  mi
distrib/sets/lists/minix-base/: mi
distrib/sets/lists/minix-comp/: md.i386  mi
distrib/sets/lists/minix-debug/: mi
distrib/sets/lists/minix-games/: mi
distrib/sets/lists/minix-man/: mi
distrib/sets/lists/tests/: mi
etc/mtree/: Minix.libcxx  NetBSD.dist.base
games/: Makefile
lib/: Makefile
lib/libc/misc/: initfini.c
lib/libc/stdlib/: _env.c
lib/libedit/: terminal.c
lib/libm/src/: e_asinf.c
minix/llvm/: generate_gold_plugin.sh
releasetools/: image.defaults
share/mk/: bsd.host.mk
sys/: Makefile
sys/lib/libunwind/: AddressSpace.hpp  UnwindCursor.hpp
tools/: Makefile
tools/llvm/: Makefile.inc
tools/llvm-clang/: Makefile
tools/llvm-clang-tblgen/: Makefile
tools/llvm-lld/: Makefile
tools/llvm-mcld/: Makefile
tools/llvm-tblgen/: Makefile
usr.bin/basename/: basename.c
usr.bin/make/: Makefile
usr.bin/xinstall/: xinstall.c
